解决参数死锁问题

--- a/Lession4-Model selection.ipynb
+++ b/Lession4-Model selection.ipynb
@@ -137,21 +137,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.93489148580968284, 0.95659432387312182, 0.93989983305509184]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kfold = cross_validation.KFold(len(X_digits), n_folds=3)\n",
-    "[svc.fit(X_digits[train], y_digits[train]).score(X_digits[test], y_digits[test]) for train, test in kfold]\n"
+    "#[svc.fit(X_digits[train], y_digits[train]).score(X_digits[test], y_digits[test]) for train, test in kfold]\n"
    ]
   },
   {
@@ -163,13 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.93489149,  0.95659432,  0.93989983])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cross_validation.cross_val_score(svc, X_digits, y_digits, cv=kfold, n_jobs=-1)"
+    "#教程中使用 n_jobs=-1 制定多核cpu 好像会发生死锁\n",
+    "cross_validation.cross_val_score(svc, X_digits, y_digits, cv=kfold, n_jobs=1)"
    ]
   },
   {
